Home page only shows option to leave a review if authorized q

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Italian Citizenship Reviews</title>
@@ -10,17 +10,91 @@
     <h1>Welcome to Italian Citizenship Reviews</h1>
 </header>
 <h2>Service Provider Reviews</h2>
-<form action="/service-provider" method="get">
-    <button type="submit">Add a service provider</button>
-</form>
-
+<h4>Can't find your Italian Citizenship Service Provider? Add it <a href="/service-provider">here </a></h4>
 
 <div th:each="serviceProvider : ${serviceProviders}">
-    <div class="service-provider">
+    <div style="border-style: solid">
+    <div class="service-provider" >
+        <input type="hidden" id="serviceProviderId" th:value="${serviceProvider.serviceProviderId}" />
         <h2 th:text="${serviceProvider.name}"></h2>
         <p th:text="${serviceProvider.description}"></p>
+        <h3>Reviews</h3>
+    </div>
+        <div th:if="${serviceProvider.reviews.size() != 0}">
+            <ul>
+                <li th:each="review : ${serviceProvider.reviews}">
+                    <p><b><span th:text="${review.title}"></span></b></p>
+                    <p><span th:text="${review.content}"></span></p>
+                </li>
+            </ul>
+        </div>
+        <div th:unless="${serviceProvider.reviews.size() > 0}">
+            <p><b><em>No reviews available.</em></b></p>
+        </div>
 
+
+        <!- this will need to be changed! -->
+        <div th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}">
+            <form id="reviewForm">
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" value="Give a brief title of your experience"><br><br>
+                <label for="content">Review</label>
+                <textarea id="content" name="content"></textarea><br><br>
+                <label for="rating">Rating:</label>
+                <select id="rating" name="rating">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+                <button type="submit" onclick="createReview()">Update Review</button>
+            </form>
+        </div>
+        <div th:unless="${#vars.request.isUserInRole('ROLE_ADMIN')}">
+            <b>Login to leave a review!</b>
+        </div>
+            <script type="text/javascript">
+                function createReview() {
+                    var serviceProviderId = document.getElementById("serviceProviderId").value;
+                    var title = document.getElementById('title').value;
+                    var content = document.getElementById('content').value;
+                    var userId = document.getElementById('userId').value;
+                    var rating = document.getElementById('rating').value;
+
+                    var review = {
+                        title: title,
+                        content: content,
+                        userId: userId,
+                        serviceProviderId: { serviceProviderId: serviceProviderId },
+                        rating: rating
+                    };
+
+                    // Fetch request
+                    fetch('/review', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(review)
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            // Handle response data
+                            console.log(data);
+                        })
+                        .catch(error => {
+                            // Handle error
+                            console.error(error);
+                        });
+                }
+            </script>
+        </div>
     </div>
 </div>
+
+<form action="/service-provider" method="get" id="add-service-provider">
+    <button type="submit">Add a service provider</button>
+</form>
 </body>
 </html>
