--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,8 +17,9 @@
             </div>
             <button type="submit">Login</button>
             <button action="/logout" >Logout </button>
+
         </form>
-    <h2>Registration Form</h2>
+    <h2>Register</h2>
         <form th:action="@{/register}" method="post">
             <div>
                 <label for="username">Username:</label>
@@ -63,5 +64,7 @@
             </div>
             <button type="submit">Register</button>
         </form>
+    <h2> You should write something like about why you should sign up as well as what there is to offer if you sign-up.</h2>
+
 </body>
 </html>
