--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>Login</title>
+    <nav>
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/user/dashboard">User Dashboard</a></li>
+        </ul>
+    </nav>
 </head>
 <body>
     <h2>Login</h2>
