--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -2,31 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add a new Service Provider</title>
+    <title th:text="${serviceProvider.name}"></title>
+    <nav>
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/user/dashboard/">User Dashboard</a></li>
+        </ul>
+    </nav>
 </head>
 <body>
-
-<div th:if="${serviceProvider == null}">
-    <h1>Add a Service Provider</h1>
-    <form th:action="@{/service-provider}" method="post">
-        <label for="name">Name:</label><br><br>
-        <input type="text" id="name" name="name" required/><br><br>
-        <label for="description">Description:</label><br><br>
-        <input type="text" id="description" name="description" required/><br><br>
-        <button type="submit">Add Service Provider</button>
-    </form>
-</div>
-
-<div th:if="${serviceProvider != null}">
-    <h1>Edit a Service Provider</h1>
-    <form th:action="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}" method="post">
-        <label for="edit-name"><b>Edit Name: </b><span th:text="${serviceProvider.name}"></span></label><br><br>
-        <input type="text" id="edit-name" name="name" th:value="${serviceProvider.name}" required/><br><br>
-        <label for="edit-description"><b>Edit Description: </b><span th:text="${serviceProvider.description}"></span></label><br><br>
-        <textarea id="edit-description"  name="description" required style="font-family: Arial, sans-serif;">[[${serviceProvider.description}]]</textarea><br><br>
-        <button type="submit">Update Service Provider</button>
-    </form>
-</div>
-
+    <div>
+        <h1>Edit a Service Provider</h1>
+        <form th:action="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}" method="post">
+            <label for="edit-name"><b>Edit Name: </b><span th:text="${serviceProvider.name}"></span></label><br><br>
+            <input type="text" id="edit-name" name="name" th:value="${serviceProvider.name}" required/><br><br>
+            <label for="edit-description"><b>Edit Description: </b><span th:text="${serviceProvider.description}"></span></label><br><br>
+            <textarea id="edit-description"  name="description" required style="font-family: Arial, sans-serif;">[[${serviceProvider.description}]]</textarea><br><br>
+            <button type="submit">Update Service Provider</button>
+        </form>
+    </div>
 </body>
 </html>
