--- a/src/main/resources/templates/landing-page.html
+++ b/src/main/resources/templates/landing-page.html
@@ -70,7 +70,44 @@
         </div>
       </div>
     </div>
-    <!-- add more service provider cards here as needed -->
+  </div>
+  <div class="w3-row-padding w3-padding-16 w3-center" id="service-providers2">
+      <div class="w3-col s12 m6 l3">
+        <div class="w3-card-4">
+          <div class="w3-container">
+            <h3></h3>
+            <p></p>
+            <h3></h3>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col s12 m6 l3">
+        <div class="w3-card-4">
+          <div class="w3-container">
+            <h3></h3>
+            <p></p>
+            <h3></h3>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col s12 m6 l3">
+        <div class="w3-card-4">
+          <div class="w3-container">
+            <h3></h3>
+            <p></p>
+            <h3></h3>
+          </div>
+        </div>
+      </div>
+      <div class="w3-col s12 m6 l3">
+        <div class="w3-card-4">
+          <div class="w3-container">
+            <h3></h3>
+            <p></p>
+            <h3></h3>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
 
