--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,89 +1,145 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Italian Citizenship Reviews</title>
-    <link rel="stylesheet" href="src/main/resources/static/css/home.css">
 
+    <title >Italian Citizenship Reviews</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <style>
+        body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+        .w3-bar-block .w3-bar-item {padding:20px}
+    </style>
 </head>
 <body>
-<header>
-    <h1>Welcome to Italian Citizenship Reviews</h1><br>
-    <nav>
-        <ul>
-            <li><a href="/home">Home</a></li>
-            <li><a href="/user/dashboard/">User Dashboard</a></li>
-        </ul>
-    </nav>
-</header>
+<!-- Sidebar (hidden by default) -->
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+    <a href="javascript:void(0)" onclick="w3_close()"
+       class="w3-bar-item w3-button">Close Menu</a>
+    <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
+    <a href="/user/dashboard/" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
+    <a href="/home" onclick="w3_close()" class="w3-bar-item w3-button">View all Service Providers </a>
+</nav>
 
-<div>
-    <h3>"Welcome to Italian Citizenship Reviews, the go-to platform for reviews and insights on Italian citizenship recognition services.
-        Our community-driven platform offers valuable information, ratings, and reviews from individuals who have gone through the process of
-        obtaining Italian citizenship through jure sanguinis. Whether you're just starting your research or have already begun the application process,
-        we are here to provide you with the information you need to navigate the complex process of Italian citizenship recognition."</h3>
+<!-- Top menu -->
+<div class="w3-top">
+    <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+        <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+        <div class="w3-right w3-padding-16" style="margin-right: 10px">Contact</div>
+        <div class="w3-center w3-padding-16">Italian Citizenship Review</div>
+    </div>
 </div>
-<h2>Service Provider Reviews</h2>
+<h2 style="margin-top: 80px">Service Provider Reviews</h2>
 <h4>Can't find your Italian Citizenship Service Provider? Add it <a href="/service-provider">here </a></h4>
 
     <div th:each="serviceProvider, stat : ${serviceProviders}" th:id="${stat.index}">
-        <div style="border-style: solid">
-        <div class="service-provider" >
-            <input type="hidden" th:id="'serviceProvider-' + ${stat.index}" th:value="${serviceProvider.serviceProviderId}" />
-            <h2><a th:href="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}">[[${serviceProvider.name}]]</a></h2>
-            <p th:text="${serviceProvider.description}"></p>
-            <p th:text="${serviceProvider.avgRating}"></p>
-            <h3>Reviews</h3>
-        </div>
-            <div th:if="${serviceProvider.reviews.size() != 0}" id="reviewList" style="border-style: solid ">
-                <ul>
-                    <li th:each="review : ${serviceProvider.reviews}">
-                        <p><b><span th:text="${review.title}"></span></b></p>
-                        <p><span th:text="${review.content}"></span></p>
-                        <p th:text="${review.rating}"><b></b></p>
-                        <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
-                            <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit">Delete review</button>
+        <div style="border-style: solid; margin-left: 10px; margin-right: 10px">
+            <div>
+                <div class="service-provider" style="margin-left: 10px">
+                    <input type="hidden" th:id="'serviceProvider-' + ${stat.index}" th:value="${serviceProvider.serviceProviderId}" />
+                    <h2><a th:href="@{/service-provider/{serviceProviderId}(serviceProviderId=${serviceProvider.serviceProviderId})}">[[${serviceProvider.name}]]</a></h2>
+                    <p th:text="${serviceProvider.description}"></p>
+                    <p class="rating" th:text="${serviceProvider.avgRating}"></p>
+                    <h3>Reviews</h3>
+                    </div>
+                        <div th:if="${serviceProvider.reviews.size() != 0}" id="reviewList" style="border-style: solid ">
+                            <ul>
+                                <li th:each="review : ${serviceProvider.reviews}">
+                                    <p><b><span th:text="${review.title}"></span></b></p>
+                                    <p><span th:text="${review.content}"></span></p>
+                                    <p class="rating" th:text="${review.rating}"><b></b></p>
+                                    <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
+                                        <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit">Delete review</button>
+                                    </form>
+                                </li>
+                            </ul>
+
+                        </div>
+                    <div th:unless="${serviceProvider.reviews.size() > 0}">
+                        <p><b><em>No reviews available.</em></b></p>
+                    </div>
+                </div>
+                    <!- this will need to be changed! -->
+                <div style="margin-left: 10px">
+                    <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
+                        <form id="reviewForm">
+                            <br>
+                            <label>Title:</label>
+                            <input type="text" th:id="'title-' + ${stat.index}" name="title" value="Give a brief title of your experience"><br>
+                            <label >Review</label>
+                            <textarea th:id="'content-' + ${stat.index}" name="content"></textarea><br>
+                            <label>Rating:</label>
+                            <select th:id="'rating-' + ${stat.index}" name="rating">
+                                <option value="1">1</option>å
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+
+                                <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}">Update Review</button>
                         </form>
-                    </li>
-                </ul>
+                        <br>
+                    </div>
 
-            </div>
-            <div th:unless="${serviceProvider.reviews.size() > 0}">
-                <p><b><em>No reviews available.</em></b></p>
-            </div>
-            <!- this will need to be changed! -->
-            <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
-                <form id="reviewForm">
-                    <br>
-                    <label>Title:</label>
-                    <input type="text" th:id="'title-' + ${stat.index}" name="title" value="Give a brief title of your experience"><br>
-                    <label >Review</label>
-                    <textarea th:id="'content-' + ${stat.index}" name="content"></textarea><br>
-                    <label>Rating:</label>
-                    <select th:id="'rating-' + ${stat.index}" name="rating">
-                        <option value="1">1</option>å
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-
-                        <button type="submit" onclick="createReview(event)" th:data-index="${stat.index}">Update Review</button>
-                </form>
-                <br>
-            </div>
-
-            <div th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
-                <b><a href="/login">Login</a> to leave a review!</b>
-            </div>
-
-            </div>
+                    <div th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
+                        <b><a href="/login">Login</a> to leave a review!</b>
+                    </div>
+                    </div>
+                </div>
         </div>
     </div>
     <br><br>
     <form action="/service-provider" method="get" id="add-service-provider">
         <button type="submit">Add a service provider</button>
     </form>
+<!-- Footer -->
+<footer class="w3-row-padding w3-padding-32">
+    <div class="w3-third">
+        <h3>FOOTER</h3>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </div>
+
+    <div class="w3-third">
+        <h3>BLOG POSTS</h3>
+        <ul class="w3-ul w3-hoverable">
+            <li class="w3-padding-16">
+
+                <span class="w3-large">Lorem</span><br>
+                <span>Sed mattis nunc</span>
+            </li>
+            <li class="w3-padding-16">
+                <span class="w3-large">Ipsum</span><br>
+                <span>Praes tinci sed</span>
+            </li>
+        </ul>
+    </div>
+
+    <div class="w3-third w3-serif">
+        <h3>POPULAR TAGS</h3>
+        <p>
+            <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dinner</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Salmon</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">France</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Drinks</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Flavors</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Cuisine</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Chicken</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Dressing</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fried</span>
+            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Fish</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Duck</span>
+        </p>
+    </div>
+</footer>
 <script src="/js/home.js"></script>
+<script>
+    // Script to open and close sidebar
+    function w3_open() {
+        document.getElementById("mySidebar").style.display = "block";
+    }
+
+    function w3_close() {
+        document.getElementById("mySidebar").style.display = "none";
+    }
+</script>
 </body>
 </html>
