--- a/src/main/resources/templates/landing-page.html
+++ b/src/main/resources/templates/landing-page.html
@@ -2,12 +2,14 @@
       <html>
       <head>
 
-      <title>W3.CSS Template</title>
+      <title>Italian Citizenship Reviews</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-  <style>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+        <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     .w3-bar-block .w3-bar-item {padding:20px}
   </style>
@@ -26,7 +28,7 @@
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16">Contact</div>
+    <div class="w3-right w3-padding-16" style="margin-right: 10px">Contact</div>
     <div class="w3-center w3-padding-16">Italian Citizenship Review</div>
   </div>
 </div>
@@ -39,7 +41,7 @@
         <div class="w3-container">
           <h3></h3>
           <p></p>
-          <h3></h3>
+          <h3 class="rating"></h3>
         </div>
       </div>
     </div>
@@ -48,7 +50,7 @@
         <div class="w3-container">
           <h3></h3>
           <p></p>
-          <h3></h3>
+          <h3 class="rating"></h3>
         </div>
       </div>
     </div>
@@ -57,7 +59,7 @@
         <div class="w3-container">
           <h3></h3>
           <p></p>
-          <h3></h3>
+          <h3 class="rating"></h3>
         </div>
       </div>
     </div>
@@ -66,7 +68,7 @@
         <div class="w3-container">
           <h3></h3>
           <p></p>
-          <h3></h3>
+          <h3 class="rating"></h3>
         </div>
       </div>
     </div>
@@ -77,7 +79,7 @@
           <div class="w3-container">
             <h3></h3>
             <p></p>
-            <h3></h3>
+            <h3 class="rating"></h3>
           </div>
         </div>
       </div>
@@ -86,7 +88,7 @@
           <div class="w3-container">
             <h3></h3>
             <p></p>
-            <h3></h3>
+            <h3 class="rating"></h3>
           </div>
         </div>
       </div>
@@ -95,7 +97,7 @@
           <div class="w3-container">
             <h3></h3>
             <p></p>
-            <h3></h3>
+            <h3 class="rating"></h3>
           </div>
         </div>
       </div>
@@ -104,7 +106,7 @@
           <div class="w3-container">
             <h3></h3>
             <p></p>
-            <h3></h3>
+            <h3 class="rating"></h3>
           </div>
         </div>
       </div>
@@ -115,11 +117,16 @@
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32 w3-center">
-    <h3>About Me, The Food Man</h3><br>
+    <h3>Discover Italian Citizenship Service Providers</h3>
     <div class="w3-padding-32">
-      <h4><b>I am Who I Am!</b></h4>
-      <h6><i>With Passion For Real, Good Food</i></h6>
-      <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <h4><b>Experience A Seamless Journey to Italian Citizenship</b></h4>
+      <p>"Welcome to the gateway of your Italian Citizenship! Our platform is your ultimate destination for
+        finding elite service providers specializing in Italian citizenship. From skilled immigration lawyers to
+        expert genealogists and dedicated language tutors, we've handpicked the best professionals to guide you through
+        the process. Experience a seamless journey to Italian citizenship with our trusted network of providers who understand
+        the intricacies of the Italian system. Whether you're tracing your ancestral roots or navigating complex legal procedures,
+        our platform connects you with the expertise you need. Join our community today and let us help you turn your Italian dreams
+        into reality!"</p>
     </div>
   </div>
   <hr>
